tests/machine/x/ocaml/group_by_multi_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_multi_join.ml", line 36, characters 33-36:
36 | let nations = [[("id",1);("name","A")];[("id",2);("name","B")]]
                                      ^^^
Error: This expression has type string but an expression was expected of type
         int


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let nations = [[("id",1);("name","A")];[("id",2);("name","B")]]
  37 | let suppliers = [[("id",1);("nation",1)];[("id",2);("nation",2)]]
  38 | let partsupp = [[("part",100);("supplier",1);("cost",10);("qty",2)];[("part",100);("supplier",2);("cost",20);("qty",1)];[("part",200);("supplier",1);("cost",5);("qty",3)]]
